--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,9 @@ AD_SUBMITTED_MESSAGE=✅ Your ad has been submitted for review!
 AD_APPROVED_MESSAGE=🎉 Your ad has been approved and published!
 AD_REJECTED_MESSAGE=❌ Your ad has been rejected.
 AD_TAG_TEXT=📢 Ad posted on
+
+# Anti-spam Configuration
+AD_COOLDOWN_SECONDS=30
+AD_DAILY_LIMIT=5
+SUPPORT_COOLDOWN_SECONDS=60
+SUPPORT_HOURLY_LIMIT=3
